push antes de levantar en google cloud run por primera vez

--- a/nginx.conf
+++ b/nginx.conf
@@ -90,11 +90,11 @@ http {
     limit_req_status 429;
 
     # =============================================================================
-    # SERVER BLOCK - FabriApp Website
+    # SERVER BLOCK - FabriApp Website (Cloud Run Compatible)
     # =============================================================================
     server {
-        listen 80;
-        listen [::]:80;
+        listen 8080;
+        listen [::]:8080;
         server_name _;
         root /usr/share/nginx/html;
         index index.html;
